# teste-docker-streamlit

./: Dockerfile  LICENSE  README.md  app.py  pyproject.toml
